flex container overflow fix

--- a/index.css
+++ b/index.css
@@ -228,9 +228,15 @@ footer nav a:first-child {
         font-size: 2.5rem;
     }
 
+    .section-content {
+        gap:1rem;
+        overflow: auto;
+    }
+
     .card {
         padding: 1rem;
-        width: 80%;
+        min-width: 40%;
+        margin-bottom: 20px;
     }
 
     .card h4 {
